# ship_detection_from_optical_images

./: LICENSE  README.md  clone-and-implement.md  holdout_training_on_another_pc.md  push-to-github.md  pyproject.toml  streamlit_app.py
configs/: default.yaml
demo/: README.md  pyproject.toml  run_demo.sh  streamlit_app.py
demo/src/ship_sat/: __init__.py  infer_sahi.py
scripts/: plot_training_curves.py
src/ship_sat/: dataset_prep.py  download.py  obb_labels.py  rle.py  train.py
tests/: test_rle_obb.py
